Button fixed on mobile

--- a/app/assets/stylesheets/mobile.scss
+++ b/app/assets/stylesheets/mobile.scss
@@ -103,19 +103,15 @@
 
 @media(max-width:420px){
 	.pitch-group{
-		margin-top:30%;
-		margin-bottom:30%;
-        margin-right:8%;
-
+		margin-top:55%;
 	}
 
 	.pitch-group h1{
 		font-size:2.5em;
-		margin-left: 2%;
 	}
 	.pitch-group h2{
 		font-size:1.5em;
-		margin-left: 8%;
+		margin: 1.5em;
 	}
 
 	.subscribe-form{
